--- a/app/src/main/res/layout/fragment_store.xml
+++ b/app/src/main/res/layout/fragment_store.xml
@@ -14,11 +14,11 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="170dp"
-            android:background="@drawable/background_store"
+            android:background="@drawable/store_background"
             android:gravity="left"
-            android:scaleY="1"
+            android:orientation="vertical"
             android:scaleX="1"
-            android:orientation="vertical">
+            android:scaleY="1">
 
             <ImageView
                 android:id="@+id/navigation"
