--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="#ffffff"
+        app:headerLayout="@layout/nav_header_main"
         android:fitsSystemWindows="true"
         android:paddingTop="@dimen/_20sdp"
         app:insetForeground="@android:color/darker_gray"
