--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,7 +11,7 @@
 
 
     <FrameLayout
-        android:id="@+id/container"
+        android:id="@+id/containerForFragments"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone" />
@@ -21,8 +21,7 @@
         android:id="@+id/container1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1"
-        tools:context="com.webmarke8.app.gencart.Fragments.StoreFragment">
+        android:layout_weight="1">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,7 +31,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
-                android:background="@drawable/background_store"
+                android:background="@drawable/store_background"
                 android:gravity="left"
                 android:orientation="vertical"
                 android:scaleX="1"
