--- a/app/src/main/res/layout/fragment_my_cart.xml
+++ b/app/src/main/res/layout/fragment_my_cart.xml
@@ -39,18 +39,20 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
                     <ImageView
                         android:id="@+id/Back"
                         android:layout_width="50dp"
                         android:layout_height="30dp"
                         android:src="@drawable/back_icon" />
+
                     <ImageView
                         android:layout_width="50dp"
-                        android:visibility="invisible"
                         android:layout_height="20dp"
-                        android:src="@drawable/back_icon" />
+                        android:src="@drawable/back_icon"
+                        android:visibility="invisible" />
                 </LinearLayout>
 
                 <TextView
@@ -111,6 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/pay" />
+        android:layout_marginBottom="@dimen/_10sdp"
+        android:src="@drawable/checkout_button_new" />
 
 </RelativeLayout>
