--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -32,18 +32,20 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:orientation="vertical"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
                 <ImageView
                     android:id="@+id/Back"
                     android:layout_width="50dp"
                     android:layout_height="30dp"
                     android:src="@drawable/back_icon" />
+
                 <ImageView
                     android:layout_width="50dp"
-                    android:visibility="invisible"
                     android:layout_height="20dp"
-                    android:src="@drawable/back_icon" />
+                    android:src="@drawable/back_icon"
+                    android:visibility="invisible" />
             </LinearLayout>
 
             <TextView
@@ -277,7 +279,9 @@
                 android:layout_gravity="center"
                 android:background="@drawable/change_password" />
 
+
         </LinearLayout>
+
     </LinearLayout>
 
 </LinearLayout>
