--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -35,6 +35,8 @@
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
+                        android:scaleType="centerInside"
+                        android:adjustViewBounds="true"
                         android:src="@drawable/images" />
 
                     <TextView
@@ -43,13 +45,13 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
+                        android:alpha="0.9"
                         android:background="@drawable/rounded"
                         android:paddingBottom="@dimen/_2sdp"
-                        android:paddingTop="@dimen/_2sdp"
                         android:paddingLeft="@dimen/_5sdp"
                         android:paddingRight="@dimen/_5sdp"
+                        android:paddingTop="@dimen/_2sdp"
                         android:text="10 miles"
-                        android:alpha="0.9"
                         android:textColor="#86C65F"
                         android:textSize="16dp" />
 
