--- a/app/src/main/res/layout/fragment_chat_.xml
+++ b/app/src/main/res/layout/fragment_chat_.xml
@@ -194,54 +194,56 @@
         </LinearLayout>
 
 
-        <android.support.v7.widget.CardView
+        <!--<android.support.v7.widget.CardView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:windowSoftInputMode="adjustPan|adjustResize"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="bottom"-->
+        <!--android:minHeight="?attr/actionBarSize">-->
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:minHeight="?attr/actionBarSize">
+            android:gravity="center"
+            android:orientation="horizontal"
+           >
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:padding="@dimen/_5sdp"
+                android:src="@drawable/plusiconofchat" />
+
+
+            <EditText
+                android:id="@+id/edtMessage"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:orientation="horizontal">
+                android:layout_weight="4"
+                android:background="@drawable/send_message_background"
+                android:elevation="5dp"
+                android:padding="@dimen/_5sdp"
+                android:scaleType="centerCrop"
+                android:textColor="#000000"
+                android:textSize="20sp" />
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:padding="@dimen/_7sdp"
-                    android:paddingTop="@dimen/_20sdp"
-                    android:src="@drawable/plusiconofchat" />
-
-
-                <EditText
-                    android:id="@+id/edtMessage"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="4"
-                    android:background="@drawable/send_message_background"
-                    android:elevation="5dp"
-                    android:padding="@dimen/_5sdp"
-                    android:scaleType="centerCrop"
-                    android:textColor="#000000"
-                    android:textSize="20sp" />
-
-                <Button
-                    android:id="@+id/btnSendMessage"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:text="send"
-                    android:textAllCaps="false"
-                    android:textColor="#d1d1f6" />
-            </LinearLayout>
+            <Button
+                android:id="@+id/btnSendMessage"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@android:color/transparent"
+                android:text="send"
+                android:textAllCaps="false"
+                android:textColor="#d1d1f6" />
+        </LinearLayout>
 
 
-        </android.support.v7.widget.CardView>
+        <!--</android.support.v7.widget.CardView>-->
 
     </LinearLayout>
 
