--- a/app/src/main/res/layout/fragment_check_out.xml
+++ b/app/src/main/res/layout/fragment_check_out.xml
@@ -76,6 +76,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
+            android:gravity="center"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -130,7 +131,8 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
                 android:background="@drawable/bar" />
 
             <LinearLayout
@@ -143,13 +145,13 @@
                 <android.support.v7.widget.RecyclerView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
-
             </LinearLayout>
 
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="5dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="@dimen/_10sdp"
+                android:layout_marginRight="@dimen/_10sdp"
                 android:background="@drawable/bar" />
 
             <LinearLayout
@@ -192,7 +194,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Total:   "
+                        android:text="Total: "
                         android:textColor="#000"
                         android:textSize="20dp"
                         android:textStyle="bold" />
@@ -213,34 +215,42 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="25dp">
 
-                <ImageView
+                <TextView
                     android:id="@+id/NewDelivery"
                     android:layout_width="match_parent"
-                    android:layout_height="55dp"
+                    android:layout_height="45dp"
                     android:layout_gravity="center"
                     android:layout_marginLeft="60dp"
                     android:layout_marginRight="60dp"
-                    android:alpha="0.9"
-                    android:background="@drawable/add_new_address"
+                    android:background="@drawable/button_border_layout"
+                    android:gravity="center"
+                    android:text="Add New Delivery Address"
+                    android:textColor="@color/green"
+                    android:textSize="@dimen/_15sdp"
+                    android:textStyle="bold"
                     android:tint="@android:color/white" />
 
             </RelativeLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="65dp"
                 android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_90sdp"
+                android:layout_marginRight="@dimen/_90sdp"
                 android:layout_marginTop="10dp">
 
-                <ImageView
+                <TextView
                     android:id="@+id/Checkout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="55dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
                     android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/_90sdp"
-                    android:layout_marginRight="@dimen/_90sdp"
-                    android:alpha="0.9"
-                    android:background="@drawable/checkout_button"
+                    android:background="@drawable/button_border_layout"
+                    android:gravity="center"
+                    android:text="Checkout"
+                    android:textColor="@color/green"
+                    android:textSize="@dimen/_15sdp"
+                    android:textStyle="bold"
                     android:tint="@android:color/white" />
 
             </LinearLayout>
