--- a/app/src/main/res/layout/fragment_location_.xml
+++ b/app/src/main/res/layout/fragment_location_.xml
@@ -7,61 +7,118 @@
     android:background="#79da59"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/navigation"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_marginLeft="@dimen/_7sdp"
-        android:minHeight="?attr/actionBarSize"
-        android:padding="@dimen/_2sdp"
-        android:src="@drawable/menue"
-        android:tint="@android:color/white" />
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar1"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="?attr/actionBarSize">
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/navigation"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="@dimen/_7sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:padding="@dimen/_2sdp"
+            android:src="@drawable/menue"
+            android:tint="@android:color/white" />
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center|bottom"
+            android:paddingBottom="@dimen/_3sdp"
+            android:text="Your Location"
+            android:textColor="#fff"
+            android:textSize="19sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginLeft="@dimen/_7sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:padding="@dimen/_2sdp"
+            android:src="@drawable/menue"
+            android:tint="@android:color/white"
+            android:visibility="invisible" />
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/_5sdp">
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:gravity="center"
+            android:orientation="vertical">
+
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:orientation="vertical"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/back_icon"
+                    android:visibility="invisible" />
+
                 <ImageView
                     android:id="@+id/Back"
                     android:layout_width="50dp"
-                    android:layout_height="30dp"
+                    android:layout_height="40dp"
                     android:src="@drawable/back_icon" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center">
+
+                    <TextView
+                        android:id="@+id/UpdateLocation"
+                        android:layout_width="wrap_content"
+                        android:layout_height="44dp"
+                        android:background="@drawable/reound_button_location_manually"
+                        android:gravity="center"
+                        android:padding="@dimen/_5sdp"
+                        android:paddingLeft="@dimen/_5sdp"
+                        android:paddingRight="@dimen/_5sdp"
+                        android:text="Add Location manually"
+                        android:textColor="@android:color/black"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="20dp"
+                    android:layout_height="40dp"
+                    android:src="@drawable/back_icon"
+                    android:visibility="invisible" />
+
                 <ImageView
                     android:layout_width="50dp"
-                    android:visibility="invisible"
-                    android:layout_height="20dp"
-                    android:src="@drawable/back_icon" />
+                    android:layout_height="40dp"
+                    android:src="@drawable/back_icon"
+                    android:visibility="invisible" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/UpdateLocation"
-                android:layout_width="match_parent"
-                android:layout_height="44dp"
-                android:layout_marginLeft="@dimen/_30sdp"
-                android:layout_marginRight="@dimen/_80sdp"
-                android:background="@drawable/reound_button_location_manually"
-                android:gravity="center"
-                android:padding="@dimen/_5sdp"
-                android:text="Add Location manually"
-                android:textColor="@android:color/black"
-                android:textSize="15sp"
-                android:textStyle="bold" />
 
         </LinearLayout>
+    </LinearLayout>
 
-    </android.support.v7.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -84,7 +141,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="0.9"
             android:orientation="vertical">
 
 
@@ -93,7 +150,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/layout_bottom_line"
                 android:gravity="center"
-                android:padding="@dimen/_10sdp"
+                android:padding="@dimen/_7sdp"
                 android:text="Share Your Location"
                 android:textColor="#8a8a8a"
                 android:textSize="@dimen/_15sdp"
@@ -106,15 +163,18 @@
                 android:minHeight="?attr/actionBarSize">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:paddingLeft="@dimen/_10sdp"
+                    android:paddingRight="@dimen/_10sdp">
 
                     <TextView
-                        android:id="@+id/tvLocation"
+                        android:id="@+id/LocationAddress"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="@dimen/_5sdp"
+                        android:layout_weight="1"
                         android:lines="2"
                         android:padding="@dimen/_3sdp"
                         android:text="Location, Location, Location"
