--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -170,10 +170,11 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/capsuleboundary"
                 android:gravity="center|left"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:padding="@dimen/_10sdp">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -207,7 +208,7 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="40dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="10dp"
                     android:orientation="horizontal">
@@ -220,12 +221,12 @@
                         android:src="@drawable/detect_location" />
 
                     <TextView
-                        android:id="@+id/EditTextDetectAddress"
+                        android:id="@+id/DetectAddress"
                         android:layout_width="170dp"
-                        android:layout_height="40dp"
+                        android:layout_height="wrap_content"
                         android:background="@drawable/capsuleboundary"
                         android:gravity="center"
-                        android:text="Detect Address"
+                        android:text="Detect Address:"
                         android:textColorHint="#6e6262" />
                 </LinearLayout>
 
