--- a/app/src/main/res/layout/item_sender.xml
+++ b/app/src/main/res/layout/item_sender.xml
@@ -2,60 +2,93 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/messageLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="10dp"
-    android:layout_marginRight="10dp"
-    android:layout_marginTop="20dp"
-    android:background="#FFFFFF"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content">
 
-
-    <LinearLayout
-        android:id="@+id/messageLayout"
-        android:layout_width="30dp"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1.5"
-        android:gravity="center"
-        android:orientation="horizontal">
-
-        <LinearLayout
-            android:id="@+id/messageSideChange"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/txtsenderMessage"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginRight="5dp"
-                android:text="Message will apear"
-                android:textColor="#A09F9F"
-                android:textSize="20sp" />
-
-            <TextView
-                android:id="@+id/Txttime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginLeft="60dp"
-                android:text="7:20"
-                android:textColor="#A09F9F"
-                android:textSize="14sp" />
-
-        </LinearLayout>
+        android:paddingTop="8dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile_image"
+            android:id="@+id/ImageReciver"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/personchat" />
+            android:layout_marginLeft="8dp"
+            android:src="@drawable/personchat"
+            app:civ_border_color="#FFFFFF"
+            app:civ_border_width="1dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </LinearLayout>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/ImageSender"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="8dp"
+            android:src="@drawable/personchat"
+            app:civ_border_color="#FFFFFF"
+            app:civ_border_width="1dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/NameReciver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="4dp"
+            android:text="John Doe"
+            android:textSize="12sp"
+            app:layout_constraintLeft_toRightOf="@+id/ImageReciver"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/NameSender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="4dp"
+            android:text="John Doe"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="@+id/txtsenderMessage"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/txtsenderMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="4dp"
+            android:background="@drawable/sender_layout"
+            android:maxWidth="240dp"
+            android:padding="8dp"
+            android:text="hi man, how are you?"
+            android:textColor="#ffffff"
+            app:layout_constraintLeft_toRightOf="@+id/ImageReciver"
+            app:layout_constraintRight_toLeftOf="@+id/ImageSender"
+            app:layout_constraintTop_toBottomOf="@+id/NameReciver" />
+
+        <TextView
+            android:id="@+id/TimeReciver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:text="11:40"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/txtsenderMessage"
+            app:layout_constraintLeft_toRightOf="@+id/txtsenderMessage" />
+
+        <TextView
+            android:id="@+id/TimeSender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="11:40"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="@+id/txtsenderMessage"
+            app:layout_constraintEnd_toStartOf="@+id/txtsenderMessage" />
+    </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
