--- a/app/src/main/res/layout/item_cart_group.xml
+++ b/app/src/main/res/layout/item_cart_group.xml
@@ -23,9 +23,10 @@
 
             <TextView
                 android:id="@+id/Name"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 android:text="Title"
                 android:textColor="#5B5B5C"
                 android:textSize="12sp"
@@ -43,10 +44,12 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/StoreItemPrice"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="5dp"
+                android:layout_marginRight="@dimen/_7sdp"
                 android:text="400 SAR"
                 android:textColor="#5B5B5C"
                 android:textSize="12sp"
