--- a/app/src/main/res/drawable/notification_bandage.xml
+++ b/app/src/main/res/drawable/notification_bandage.xml
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-
-    <solid android:color="#ea5444"/>
-    <corners android:radius="12dp"/>
-
-    <stroke
-        android:width="0.5dp"
-        android:color="#f5f5f5"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
+    <solid android:color="#9F2200"/>
+    <stroke android:width="2dp" android:color="#fff" />
 </shape>
