--- a/app/src/main/res/layout/fragment_chat_.xml
+++ b/app/src/main/res/layout/fragment_chat_.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_alignParentBottom="true"
     android:orientation="vertical">
 
     <LinearLayout
@@ -97,19 +98,15 @@
 
 
             </LinearLayout>
-
         </LinearLayout>
-
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/activity_main"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="#FFFFFF"
-        android:orientation="vertical"
-        android:weightSum="10"
-        tools:context="com.example.manzoorhussain.designpractice.Chatting">
+        android:orientation="vertical">
 
 
         <LinearLayout
@@ -206,8 +203,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:gravity="center"
-            android:orientation="horizontal"
-           >
+            android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="0dp"
@@ -226,6 +222,7 @@
                 android:layout_weight="4"
                 android:background="@drawable/send_message_background"
                 android:elevation="5dp"
+                android:lines="1"
                 android:padding="@dimen/_5sdp"
                 android:scaleType="centerCrop"
                 android:textColor="#000000"
