--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -49,7 +49,7 @@
 
                     <TextView
                         android:id="@+id/Description"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentTop="true"
@@ -60,13 +60,14 @@
 
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1">
+                        android:layout_weight="2"
+                        android:gravity="end">
 
 
                         <ImageView
-                            android:id="@+id/Increase"
+                            android:id="@+id/Decrease"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:src="@drawable/minus_icon" />
@@ -81,7 +82,7 @@
                             android:text="0" />
 
                         <ImageView
-                            android:id="@+id/Decrease"
+                            android:id="@+id/Increase"
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:src="@drawable/plus_icon" />
