--- a/app/src/main/res/drawable/notification_bandage.xml
+++ b/app/src/main/res/drawable/notification_bandage.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
-    <solid android:color="#9F2200"/>
-    <stroke android:width="2dp" android:color="#fff" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <solid
+        android:color="@color/colorPrimary" />
+
+
+    <corners
+        android:bottomLeftRadius="65dp"
+        android:bottomRightRadius="65dp"
+        android:topLeftRadius="65dp"
+        android:topRightRadius="65dp" />
+
 </shape>
