--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,28 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.webmarke8.app.gencart.Activities.MainActivity">
 
 
-    <include
-        android:id="@+id/one"
-        layout="@layout/content_main"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:orientation="vertical">
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
+
+        <include
+            android:id="@+id/one"
+            layout="@layout/content_main"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
+
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="#fff"
+            app:itemIconTint="@color/green"
+            app:itemTextColor="@color/green"
+            app:menu="@menu/bottom_navigation_items" />
+    </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/NoInterent"
+        android:layout_marginTop="170dp"
+        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="#fff"
-        app:itemIconTint="@color/green"
-        app:itemTextColor="@color/green"
-        app:menu="@menu/bottom_navigation_items" />
+        android:layout_height="match_parent">
 
-</LinearLayout>
+        <include layout="@layout/no_internet_layout" />
+    </FrameLayout>
+    <FrameLayout
+        android:id="@+id/NoLocation"
+        android:layout_marginTop="170dp"
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <include layout="@layout/no_location_layout" />
+    </FrameLayout>
+</RelativeLayout>
