--- a/app/src/main/res/layout/dialog_update_location.xml
+++ b/app/src/main/res/layout/dialog_update_location.xml
@@ -45,7 +45,8 @@
 
         </LinearLayout>
 
-        <EditText
+        <AutoCompleteTextView
+            android:id="@+id/completeTextView"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@drawable/rounded_white" />
@@ -58,6 +59,7 @@
             android:gravity="center">
 
             <Button
+                android:id="@+id/OK"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
                 android:layout_marginRight="@dimen/_7sdp"
@@ -66,6 +68,7 @@
                 android:textColor="#40d466" />
 
             <Button
+                android:id="@+id/Cancel"
                 android:layout_width="wrap_content"
                 android:layout_height="35dp"
                 android:background="@drawable/button_border_layout"
