--- a/app/src/main/res/layout/fragment_chat_.xml
+++ b/app/src/main/res/layout/fragment_chat_.xml
@@ -118,9 +118,8 @@
                 android:id="@+id/ViewDriverOnMap"
                 android:layout_width="90dp"
                 android:layout_height="40dp"
-                android:layout_marginBottom="@dimen/_20sdp"
                 android:layout_marginLeft="@dimen/_20sdp"
-                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_15sdp"
                 android:src="@drawable/view_driver" />
         </LinearLayout>
 
@@ -203,6 +202,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:gravity="center"
+            android:padding="@dimen/_5sdp"
             android:orientation="horizontal">
 
             <ImageView
