--- a/app/src/main/res/layout/fragment_check_out.xml
+++ b/app/src/main/res/layout/fragment_check_out.xml
@@ -137,7 +137,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
                 android:orientation="vertical">
