--- a/app/src/main/res/layout/fragment_item.xml
+++ b/app/src/main/res/layout/fragment_item.xml
@@ -5,146 +5,165 @@
     android:orientation="vertical"
     tools:context="com.webmarke8.app.gencart.Fragments.ItemFragment">
 
-
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="170dp"
-        android:background="@drawable/store_background"
-        android:gravity="left"
-        android:orientation="vertical">
+        android:layout_height="170dp">
 
         <ImageView
-            android:id="@+id/navigation"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_marginLeft="@dimen/_7sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:minHeight="?attr/actionBarSize"
-            android:padding="@dimen/_2sdp"
-            android:src="@drawable/menue"
-            android:tint="@android:color/white" />
+            android:id="@+id/Image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/store_background" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/Back"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/_20sdp"
-                android:elevation="0dp"
-                android:gravity="center"
-                android:padding="@dimen/_2sdp"
-                android:src="@drawable/back_icon"
-                android:textAllCaps="false"
-                android:tint="@android:color/white" />
-
-            <TextView
-                android:id="@+id/StoreName"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="Amuk Store"
-                android:textColor="@android:color/white"
-                android:textSize="@dimen/_17sdp"
-                android:textStyle="bold" />
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/_20sdp"
-                android:elevation="0dp"
-                android:gravity="center"
-                android:padding="@dimen/_2sdp"
-                android:src="@drawable/back_icon"
-                android:textAllCaps="false"
-                android:tint="@android:color/white"
-                android:visibility="invisible" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="@dimen/_5sdp"
-            android:focusable="false"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingLeft="@dimen/_20sdp"
-            android:paddingRight="@dimen/_20sdp">
-
-            <RelativeLayout
-                android:layout_width="45dp"
-                android:layout_height="match_parent"
-                android:background="@drawable/search_round">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:elevation="0dp"
-                    android:gravity="center"
-                    android:padding="@dimen/_2sdp"
-                    android:src="@drawable/filtericon"
-                    android:textAllCaps="false"
-                    android:tint="@android:color/white" />
-            </RelativeLayout>
+            android:layout_height="match_parent">
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:orientation="vertical"
-                android:padding="@dimen/_5sdp">
+                android:layout_width="match_parent"
+                android:layout_height="170dp"
 
-                <EditText
-                    android:id="@+id/TextSearch"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:lines="1"
-                    android:paddingStart="10dp"
-                    android:textSize="12sp" />
+                android:gravity="left"
+                android:orientation="vertical">
 
                 <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="3dp"
-                    android:src="@drawable/search_edittext_bottom"
-                    android:tint="@android:color/white" />
-            </LinearLayout>
-
-            <RelativeLayout
-                android:id="@+id/Search"
-                android:layout_width="45dp"
-                android:layout_height="match_parent"
-                android:background="@drawable/search_round">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="50dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:elevation="0dp"
-                    android:gravity="center"
+                    android:id="@+id/navigation"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_marginLeft="@dimen/_7sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:minHeight="?attr/actionBarSize"
                     android:padding="@dimen/_2sdp"
-                    android:src="@drawable/searchicon"
-                    android:textAllCaps="false"
+                    android:src="@drawable/menue"
                     android:tint="@android:color/white" />
-            </RelativeLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/Back"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/_20sdp"
+                        android:elevation="0dp"
+                        android:gravity="center"
+                        android:padding="@dimen/_2sdp"
+                        android:src="@drawable/back_icon"
+                        android:textAllCaps="false"
+                        android:tint="@android:color/white" />
+
+                    <TextView
+                        android:id="@+id/StoreName"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center"
+                        android:text="Amuk Store"
+                        android:textColor="@android:color/white"
+                        android:textSize="@dimen/_17sdp"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/_20sdp"
+                        android:elevation="0dp"
+                        android:gravity="center"
+                        android:padding="@dimen/_2sdp"
+                        android:src="@drawable/back_icon"
+                        android:textAllCaps="false"
+                        android:tint="@android:color/white"
+                        android:visibility="invisible" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_margin="@dimen/_5sdp"
+                    android:focusable="false"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingLeft="@dimen/_20sdp"
+                    android:paddingRight="@dimen/_20sdp">
+
+                    <RelativeLayout
+                        android:layout_width="45dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/search_round">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="50dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:elevation="0dp"
+                            android:gravity="center"
+                            android:padding="@dimen/_2sdp"
+                            android:src="@drawable/filtericon"
+                            android:textAllCaps="false"
+                            android:tint="@android:color/white" />
+                    </RelativeLayout>
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:padding="@dimen/_5sdp">
+
+                        <EditText
+                            android:id="@+id/TextSearch"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1"
+                            android:background="@android:color/transparent"
+                            android:lines="1"
+                            android:paddingStart="10dp"
+                            android:textColor="@android:color/white"
+                            android:textColorHighlight="@android:color/white"
+                            android:textSize="15sp" />
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="3dp"
+                            android:src="@drawable/search_edittext_bottom"
+                            android:tint="@android:color/white" />
+                    </LinearLayout>
+
+                    <RelativeLayout
+                        android:id="@+id/Search"
+                        android:layout_width="45dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/search_round">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="50dp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_centerVertical="true"
+                            android:elevation="0dp"
+                            android:gravity="center"
+                            android:padding="@dimen/_2sdp"
+                            android:src="@drawable/searchicon"
+                            android:textAllCaps="false"
+                            android:tint="@android:color/white" />
+                    </RelativeLayout>
+
+                </LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
-
-    </LinearLayout>
+    </RelativeLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/SwipeRefreshLayout"
