--- a/app/src/main/res/layout/fragment_my_cart.xml
+++ b/app/src/main/res/layout/fragment_my_cart.xml
@@ -70,9 +70,9 @@
                     android:id="@+id/AllStoreItemPrice"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_marginRight="@dimen/_5sdp"
                     android:layout_weight="0.4"
                     android:gravity="center"
-                    android:layout_marginRight="@dimen/_5sdp"
                     android:text="Sub Total: 800 SAR"
                     android:textColor="#fff"
                     android:textSize="12sp"
@@ -91,8 +91,11 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/layout"
+        android:layout_margin="@dimen/_4sdp"
         android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp" />
+        android:layout_marginRight="5dp"
+        android:animateLayoutChanges="true"
+        android:groupIndicator="@null" />
 
 
     <ImageView
