--- a/app/src/main/res/layout/item_product_item.xml
+++ b/app/src/main/res/layout/item_product_item.xml
@@ -40,14 +40,13 @@
                         android:layout_width="wrap_content"
                         android:layout_height="105dp">
 
-
                         <ImageView
                             android:id="@+id/image"
                             android:layout_width="match_parent"
-                            android:layout_height="100dp"
+                            android:layout_height="120dp"
                             android:adjustViewBounds="true"
                             android:background="@drawable/rounded"
-                            android:scaleType="fitXY"
+                            android:scaleType="centerCrop"
                             android:src="@drawable/pepsi_2" />
 
 
@@ -57,7 +56,6 @@
                             android:layout_alignParentBottom="true"
                             android:layout_alignParentEnd="true"
                             android:gravity="end">
-
 
                             <TextView
                                 android:id="@+id/Price"
@@ -103,10 +101,10 @@
 
                         <LinearLayout
                             android:layout_width="wrap_content"
-                            android:padding="@dimen/_2sdp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:orientation="horizontal">
+                            android:orientation="horizontal"
+                            android:padding="@dimen/_2sdp">
 
                             <ImageView
                                 android:id="@+id/Decrease"
@@ -121,9 +119,9 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:gravity="center"
+                                android:maxLength="3"
                                 android:paddingLeft="@dimen/_5sdp"
                                 android:paddingRight="@dimen/_5sdp"
-                                android:maxLength="3"
                                 android:text="0"
                                 android:textColor="#000"
                                 android:textStyle="bold" />
