--- a/app/src/main/res/layout/item_store.xml
+++ b/app/src/main/res/layout/item_store.xml
@@ -30,12 +30,11 @@
                     <ImageView
                         android:id="@+id/StoreImage"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_alignParentLeft="true"
                         android:layout_alignParentStart="true"
                         android:layout_alignParentTop="true"
                         android:adjustViewBounds="true"
-                        android:scaleType="centerInside"
                         android:src="@drawable/images" />
 
                     <TextView
@@ -62,7 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:padding="2dp">
+                android:padding="1dp">
 
                 <TextView
                     android:id="@+id/StoreName"
@@ -80,12 +79,13 @@
 
 
             </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/layoout_shape_gradient"
                 android:orientation="horizontal"
-                android:padding="10dp">
+                android:padding="7dp">
 
                 <TextView
                     android:layout_width="wrap_content"
