--- a/app/src/main/res/layout/no_internet_layout.xml
+++ b/app/src/main/res/layout/no_internet_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     android:id="@+id/MessageView"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:gravity="center"
@@ -38,6 +38,14 @@
             android:text="Please check your internet connection \n  and try again."
             android:textColor="#72b65b"
             android:textSize="16dp" />
+
+        <Button
+            android:id="@+id/RetryConection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_gravity="center"
+            android:text="Retry" />
 
     </LinearLayout>
 
